# devtoday-backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/api/dependencies/: services.py
app/api/routes/: cats.py  missions.py
app/config/: settings.py
app/config/logs/: log_config.py
app/core/: database.py
app/models/: __init__.py  base.py  cats.py  missions.py
app/schemas/: cats.py  missions.py
app/services/: base.py  cats.py  missions.py
migrations/: env.py
migrations/versions/: 0a0efa1aa41a_add_on_delete_constraint_to_a_target.py  8b5d0eddd753_initial_migration.py  da47efbf7b75_change_notes_type.py
